--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
           <input type="text" class="form-control" id="InputEndYear">
         </div>
 
-        <button type="button" class="btn"><i class="fas fa-search"></i> Search</button>
-        <button type="button" class="btn"><i class="fa fa-trash"></i> Clear Results</button>
+        <button type="button" class="btn" id="search-btn"><i class="fas fa-search"></i> Search</button>
+        <button type="button" class="btn" id="clear-btn"><i class="fa fa-trash"></i> Clear Results</button>
       </form>
     </div>
 
@@ -68,13 +68,7 @@
       <div class="sub-container">
         <h6 class="subheading"><i class="fa fa-newspaper"></i></i> Top Articles</h6>
       </div>
-
-      <div class="form-container">
-        <form>
-          <div class="form-group"></div>
-        </form>
-      </div>
-
+      <div class="articles"></div>
     </div>
 
     <footer class="footer">
