updated js file

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@
 
         <div class="form-group">
           <label> Number of Records to Retrieve:</label>
-          <select class="form-control" id="FormControlSelect1">
+          <select class="form-control" id="FormControlSelect">
+            <option>3</option>
             <option>5</option>
             <option>10</option>
-            <option>50</option>
-            <option>100</option>
           </select>
         </div>
                    
@@ -72,7 +71,7 @@
     </div>
 
     <footer class="footer">
-      <h6>&copy; 2022 - Codrina Pal</h6>
+      <h6>&copy; 2023 - Codrina Pal</h6>
     </footer>
     
   </div>
