--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="form-group">
           <label> Number of Records to Retrieve:</label>
           <select class="form-control" id="FormControlSelect">
+            <option></option>
             <option>3</option>
             <option>5</option>
             <option>10</option>
@@ -71,7 +72,7 @@
     </div>
 
     <footer class="footer">
-      <h6>&copy; 2023 - Codrina Pal</h6>
+      <p>&copy; 2023 - Codrina Pal</p>
     </footer>
     
   </div>
